@@ -1,5 +1,6 @@
 * Fix "uninitialized value" warnings (Dave Rolsky)
 * Add special case for Perl::Critic (Alexandr Ciornii)
+* Add special case for Event (Alexandr Ciornii)
 
 [Changes for 0.94 - 2009-08-10]
 * Add tests for scan_line (Alexandr Ciornii)
